--- a/web.html
+++ b/web.html
@@ -6,6 +6,7 @@
     <body>
         <div>
             <h1>Hola a todos!</h1>
+            <h2>Primer commit</h2>
         </div>
     </body>
 </html>
